2014-02-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Console.h:
	* Console.cpp:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* Material.h:
	* Material.cpp:
	* Script.h:
	* BoxOptions.h:
	* Script.cpp:
	* SpotLight.h:
	* PointLight.h:
	* SpotLight.cpp:
	* X3DJavaScriptContext.h:
	* BoxOptions.cpp:
	* X3DOptionNode.h:
	* Disk2DOptions.h:
	* PointLight.cpp:
	* TwoSidedMaterial.h:
	* Circle2DOptions.h:
	* Disk2DOptions.cpp:
	* X3DOptionNode.cpp:
	* TwoSidedMaterial.cpp:
	* X3DGeometryNode.h:
	* Circle2DOptions.cpp:
	* X3DTransformNode.h:
	* QuadSphereOptions.h:
	* DirectionalLight.h:
	* TextureTransform.h:
	* Rectangle2DOptions.h:
	* X3DTransformNode.cpp:
	* QuadSphereOptions.cpp:
	* X3DGeometryNode.cpp:
	* DirectionalLight.cpp:
	* TextureTransform.cpp:
	* Rectangle2DOptions.cpp:
	* TextureTransform3D.h:
	* X3DGeometricOptionNode.h:
	* TextureTransform3D.cpp:
	* X3DGeometricOptionNode.cpp:
	* X3DTextureTransformNode.h:
	* X3DTextureTransformNode.cpp:
	* TextureTransformMatrix3D.h:
	* X3DBackgroundNode.h:
	* TextureTransformMatrix3D.cpp:
	* X3DBackgroundNode.cpp: 

2014-02-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Sound.h:
	* Sound.cpp: 

2014-02-07  Holger Seelig  <holger.seelig@yahoo.de>

	* MediaStream.h:
	* MediaStream.cpp: 

2014-02-07  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* MediaStream.cpp:
	* Viewpoint.h:
	* Viewpoint.cpp:
	* X3DBackgroundNode.cpp: 

2014-02-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.h:
	* Parser.h:
	* X3DObject.h:
	* Traverse.cpp:
	* X3DBaseNode.h:
	* X3DProto.h:
	* X3DChildObject.h:
	* X3DBaseNode.cpp:
	* NodeTypeArray.h:
	* X3DRenderer.h:
	* Tessellator.h:
	* NodeTypeArray.cpp:
	* GarbageCollector.h:
	* X3DNode.h:
	* X3DRenderer.cpp:
	* Shape.cpp:
	* X3DNode.cpp:
	* X3DBrowserContext.h:
	* FieldDefinitionArray.h:
	* X3DBrowserContext.cpp:
	* Selection.cpp:
	* LayerSet.h:
	* FieldDefinitionArray.cpp:
	* X3DFontStyleNode.h:
	* X3DLayerNode.h:
	* jsContext.h:
	* TriangleFanSet.h:
	* IndexedLineSet.h: