@@ -86,7 +86,7 @@ GarbageCollector::trimFreeMemory ()
 }
 
 void
-GarbageCollector::addObject (X3DObject* object)
+GarbageCollector::addObject (X3DObject* const object)
 {
 	std::lock_guard <std::mutex> lock (mutex);
 
@@ -129,9 +129,18 @@ GarbageCollector::size () const
 
 GarbageCollector::~GarbageCollector ()
 {
-	std::lock_guard <std::mutex> lock (mutex);
+	ObjectArray final;
 
-	deleteObjects (std::move (objects));
+	while (not empty ())
+	{
+		{
+			std::lock_guard <std::mutex> lock (mutex);
+
+			final = std::move (objects);
+		}
+
+		deleteObjects (std::move (final));
+	}
 }
 
 } // X3D
